--- a/src/app/empresas/empresas/empresas.component.html
+++ b/src/app/empresas/empresas/empresas.component.html
@@ -2,7 +2,7 @@
 <input type="file" (change)="onFileChange($event)" multiple="false" />
 	<table class="sjs-table">
 		<tbody>
-      <tr *ngFor="let row of data">
+      <tr *ngFor="let row of datos">
 			<td *ngFor="let val of row">
 				{{val}}
 			</td>
