--- a/src/app/core/admin/login/login.component.html
+++ b/src/app/core/admin/login/login.component.html
@@ -1,3 +1,19 @@
+<div class="card mb-3" style="max-width: 540px;">
+  <div class="row no-gutters">
+    <div class="col-md-4">
+      <img src="../../../../assets/administrador.jpg" class="card-img" alt="Empresa" style="height: 12rem;">
+    </div>
+    <div class="col-md-8">
+      <div class="card-body">
+        <h5 class="card-title">Card title</h5>
+        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!--
 <div class="row" style="margin: 80px">
   <div class="col s12">
     <div class="card horizontal small">
@@ -10,6 +26,8 @@
         <a style="margin-left: 2rem;" routerLink="/empresas/empresa">Registrar</a>
         <a style="margin-left: 1rem;" routerLink="/users/selEmpresa">Seleccionar</a>
       </div>
+
+    -->
 
       <!--
       <form class="col s12" style="margin-left: 1rem;" name="form" (ngSubmit)="f.form.valid && onLogin()" #f="ngForm" id="form_login">
@@ -40,6 +58,9 @@
         <button type="submit" class="btn" id="accessar" [disabled]="f.invalid" style="width: 100%">Accesar</button>
         </form>
       -->
+
+<!--
     </div>
   </div>
 </div>
+-->
