--- a/src/app/core/admin/login/login.component.html
+++ b/src/app/core/admin/login/login.component.html
@@ -1,33 +1,23 @@
-<div class="card mb-3" style="max-width: 540px;">
-  <div class="row no-gutters">
-    <div class="col-md-4">
-      <img src="../../../../assets/administrador.jpg" class="card-img" alt="Empresa" style="height: 12rem;">
-    </div>
-    <div class="col-md-8">
-      <div class="card-body">
-        <h5 class="card-title">Card title</h5>
-        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+<!-- max-width: 200px; margin: 0 auto; margin-top: 30px; -->
+<div>
+  <div class="card mb-3;">
+    <div class="row no-gutters">
+      <div class="col-md-4">
+        <img src="../../../../assets/administrador.jpg" class="card-img" alt="Empresa" style="height: 6rem;">
+      </div>
+      <div class="col-md-8">
+        <div class="card-body text-center">
+          <h5 class="card-title">EMPRESA</h5>
+          <a routerLink="/empresas/empresa">Registrar</a>
+          <!--
+            <a style="margin-left: 5rem;" routerLink="/users/selEmpresa">Seleccionar</a>
+          -->
+        </div>
       </div>
     </div>
   </div>
 </div>
 
-<!--
-<div class="row" style="margin: 80px">
-  <div class="col s12">
-    <div class="card horizontal small">
-      <div class="card-image">
-        <img src="../../../../assets/administrador.jpg">
-      </div>
-
-      <div class="row">
-        <h6 class="center green-text">EMPRESA</h6>
-        <a style="margin-left: 2rem;" routerLink="/empresas/empresa">Registrar</a>
-        <a style="margin-left: 1rem;" routerLink="/users/selEmpresa">Seleccionar</a>
-      </div>
-
-    -->
 
       <!--
       <form class="col s12" style="margin-left: 1rem;" name="form" (ngSubmit)="f.form.valid && onLogin()" #f="ngForm" id="form_login">
@@ -59,8 +49,3 @@
         </form>
       -->
 
-<!--
-    </div>
-  </div>
-</div>
--->
