--- a/src/app/core/admin/login/login.component.html
+++ b/src/app/core/admin/login/login.component.html
@@ -1,4 +1,28 @@
-<!-- max-width: 200px; margin: 0 auto; margin-top: 30px; -->
+<div class="modal fade" id="staticBackdrop" data-backdrop="static" data-keyboard="false" tabindex="-1" role="dialog" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="staticBackdropLabel">Modal title</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        ...
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary">Understood</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+
+
+
+
+<!-- max-width: 200px; margin: 0 auto; margin-top: 30px;
 <div>
   <div class="card mb-3;">
     <div class="row no-gutters">
@@ -9,15 +33,15 @@
         <div class="card-body text-center">
           <h5 class="card-title">EMPRESA</h5>
           <a routerLink="/empresas/empresa">Registrar</a>
-          <!--
+
             <a style="margin-left: 5rem;" routerLink="/users/selEmpresa">Seleccionar</a>
-          -->
+
         </div>
       </div>
     </div>
   </div>
 </div>
-
+-->
 
       <!--
       <form class="col s12" style="margin-left: 1rem;" name="form" (ngSubmit)="f.form.valid && onLogin()" #f="ngForm" id="form_login">
