--- a/src/app/core/admin/login/login.component.html
+++ b/src/app/core/admin/login/login.component.html
@@ -1,6 +1,6 @@
 <!-- max-width: 200px; margin: 0 auto; margin-top: 30px; -->
-<div>
-  <div class="card mb-3;">
+
+  <div class="card mb-3; max-width: 200px;">
     <div class="row no-gutters">
       <div class="col-md-4">
         <img src="../../../../assets/administrador.jpg" class="card-img" alt="Empresa" style="height: 6rem;">
@@ -8,7 +8,7 @@
       <div class="col-md-8">
         <div class="card-body text-center">
           <h5 class="card-title">EMPRESA</h5>
-          <a routerLink="/empresas/empresa">Registrar</a>
+          <a routerLink="/empresas/empresa">Registrate</a>
           <!--
             <a style="margin-left: 5rem;" routerLink="/users/selEmpresa">Seleccionar</a>
           -->
@@ -16,7 +16,7 @@
       </div>
     </div>
   </div>
-</div>
+
 
 
       <!--
