--- a/src/app/empresas/empresas/empresas.component.html
+++ b/src/app/empresas/empresas/empresas.component.html
@@ -7,9 +7,20 @@
               <label class="custom-file-label" for="inputGroupFile" aria-describedby="inputGroupFileAddon">Elija Empresa o Insitutción, extension XLSX
               </label>
           </div>
+          <p> y/o </p>
+          <button class="btn btn-primary" type="button" data-toggle="collapse" data-target="#collapseEmpresa" aria-expanded="false" aria-controls="collapseEmpresa">
+            Dar de alta a la empresa
+          </button>
       </div>
     </div>
 
+    <div class="collapse" id="collapseEmpresa">
+      <div class="card card-body">
+        Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.
+      </div>
+    </div>
+
+<!--
     <form>
       <div class="form-row">
         <div class="form-group col-md-6">
@@ -56,6 +67,7 @@
       </div>
       <button type="submit" class="btn btn-primary">Sign in</button>
     </form>
+-->
 
     <!--
     <table class="sjs-table">
