--- a/src/app/empresas/empresas/empresas.component.html
+++ b/src/app/empresas/empresas/empresas.component.html
@@ -2,7 +2,7 @@
   <div class="row">
     <div class="col-sm-6 mx-auto">
       <div class="input-group mb-3">
-          <div class="custom-file">
+          <div class="custom-file" data-toggle="collapse" data-target="#collapseEmpresa" aria-expanded="false" aria-controls="collapseEmpresa">
               <input type="file" (change)="onFileChange($event)" class="custom-file-input" id="inputGroupFile">
               <label class="custom-file-label" for="inputGroupFile" aria-describedby="inputGroupFileAddon">Elija Empresa o Insitutción, extension XLSX
               </label>
