--- a/src/app/empresas/empresas/empresas.component.html
+++ b/src/app/empresas/empresas/empresas.component.html
@@ -8,7 +8,8 @@
         </div>
 
         <div class="input-group-append">
-          <button class="btn btn-outline-secondary" (click)="cargar=false" [hidden]=!cargar data-toggle="collapse" data-target="#collapseEmpresa" aria-expanded="false" aria-controls="collapseEmpresa" type="button" id="inputGroupFileAddon04">
+          <!-- (click)="cargar=false" -->
+          <button class="btn btn-outline-secondary" [hidden]=!cargar data-toggle="collapse" data-target="#collapseEmpresa" aria-expanded="false" aria-controls="collapseEmpresa" type="button" id="inputGroupFileAddon04">
             <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-file-earmark-arrow-down" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
               <path d="M4 1h5v1H4a1 1 0 0 0-1 1v10a1 1 0 0 0 1 1h8a1 1 0 0 0 1-1V6h1v7a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2V3a2 2 0 0 1 2-2z"/>
               <path d="M9 4.5V1l5 5h-3.5A1.5 1.5 0 0 1 9 4.5z"/>
@@ -17,6 +18,17 @@
             </svg>
           </button>
         </div>
+
+        <div [hidden]=!cargar role="alert" aria-live="assertive" aria-atomic="true" class="toast" data-autohide="false">
+          <div class="toast-header">
+            <small>Descargar datos ...</small>
+            <button type="button" class="ml-2 mb-1 close" data-dismiss="toast" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+        </div>
+
+
       </div>
     </div>
 
