--- a/src/app/empresas/empresas/empresas.component.html
+++ b/src/app/empresas/empresas/empresas.component.html
@@ -1,14 +1,10 @@
 <div class="container py-3">
 
-  <div style="position: absolute; top: 0; right: 0;" class="show-toast" id="myToast">
-    <div class="toast-header">
-        <strong class="mr-auto"><i class="fa fa-grav"></i> We miss you!</strong>
-        <small>11 mins ago</small>
-        <button type="button" class="ml-2 mb-1 close" data-dismiss="toast">&times;</button>
-    </div>
-    <div class="toast-body">
-        It's been a long time since you visited us. We've something special for you. <a href="#">Click here!</a>
-    </div>
+  <div class="toast" id="myToast" style="position: absolute; top: 0; right: 0;">
+      <div class="toast-header">
+          <strong class="mr-auto"><i class="fa fa-grav"></i> We miss you!</strong>
+          <small>Descargar datos ...</small>
+      </div>
   </div>
 
   <div class="row">
