--- a/src/app/empresas/empresas/empresas.component.html
+++ b/src/app/empresas/empresas/empresas.component.html
@@ -1,14 +1,5 @@
 <div class="container py-3">
 
-  <button type="button" class="btn btn-lg btn-danger" data-toggle="popover" title="Popover title" data-content="And here's some amazing content. It's very engaging. Right?">Click to toggle popover</button>
-
-  <div class="toast" id="myToast" style="position: absolute; top: 0; right: 0;">
-      <div class="toast-header">
-          <strong class="mr-auto"><i class="fa fa-grav"></i> We miss you!</strong>
-          <small>Descargar datos ...</small>
-      </div>
-  </div>
-
   <div class="row">
     <div class="col">
       <div class="input-group mb-3">
@@ -17,9 +8,10 @@
             <label class="custom-file-label" for="inputGroupFile" aria-describedby="inputGroupFileAddon" data-browse="Seleccione ....">Elija Empresa o Insitutción, extension XLSX</label>
         </div>
 
-        <div class="input-group-append">
+        <div class="input-group-append" data-toggle="popover" title="Descargar datos ..."
+             data-content="Los datos de la EMPRESA se pueden MODIFICAR">
           <!-- (click)="cargar=false" -->
-          <button class="btn btn-outline-secondary" [hidden]=!cargar data-toggle="collapse" data-target="#collapseEmpresa" aria-expanded="false" aria-controls="collapseEmpresa" type="button" id="inputGroupFileAddon04">
+          <button class="btn btn-outline-secondary" (click)="cargar=false" [hidden]=!cargar data-toggle="collapse" data-target="#collapseEmpresa" aria-expanded="false" aria-controls="collapseEmpresa" type="button" id="inputGroupFileAddon04">
             <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-file-earmark-arrow-down" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
               <path d="M4 1h5v1H4a1 1 0 0 0-1 1v10a1 1 0 0 0 1 1h8a1 1 0 0 0 1-1V6h1v7a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2V3a2 2 0 0 1 2-2z"/>
               <path d="M9 4.5V1l5 5h-3.5A1.5 1.5 0 0 1 9 4.5z"/>
@@ -28,17 +20,6 @@
             </svg>
           </button>
         </div>
-
-        <!--
-        <div [hidden]=!cargar role="alert" aria-live="assertive" aria-atomic="true" class="toast" data-autohide="false">
-          <div class="toast-header">
-            <small>Descargar datos ...</small>
-            <button type="button" class="ml-2 mb-1 close" data-dismiss="toast" aria-label="Close">
-              <span aria-hidden="true">&times;</span>
-            </button>
-          </div>
-        </div>
-      -->
 
       </div>
     </div>
@@ -116,7 +97,52 @@
 
   <div class="collapse" id="collapseEmpresa">
     <div class="card card-body">
-      Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.
+      <form>
+        <div class="form-row">
+          <div class="form-group col-md-6">
+            <label for="inputEmail4">Email</label>
+            <input type="email" class="form-control" id="inputEmail4">
+          </div>
+          <div class="form-group col-md-6">
+            <label for="inputPassword4">Password</label>
+            <input type="password" class="form-control" id="inputPassword4">
+          </div>
+        </div>
+        <div class="form-group">
+          <label for="inputAddress">Address</label>
+          <input type="text" class="form-control" id="inputAddress" placeholder="1234 Main St">
+        </div>
+        <div class="form-group">
+          <label for="inputAddress2">Address 2</label>
+          <input type="text" class="form-control" id="inputAddress2" placeholder="Apartment, studio, or floor">
+        </div>
+        <div class="form-row">
+          <div class="form-group col-md-6">
+            <label for="inputCity">City</label>
+            <input type="text" class="form-control" id="inputCity">
+          </div>
+          <div class="form-group col-md-4">
+            <label for="inputState">State</label>
+            <select id="inputState" class="form-control">
+              <option selected>Choose...</option>
+              <option>...</option>
+            </select>
+          </div>
+          <div class="form-group col-md-2">
+            <label for="inputZip">Zip</label>
+            <input type="text" class="form-control" id="inputZip">
+          </div>
+        </div>
+        <div class="form-group">
+          <div class="form-check">
+            <input class="form-check-input" type="checkbox" id="gridCheck">
+            <label class="form-check-label" for="gridCheck">
+              Check me out
+            </label>
+          </div>
+        </div>
+        <button type="submit" class="btn btn-primary">Sign in</button>
+      </form>
     </div>
   </div>
 
