--- a/src/app/empresas/detalle-empresa/detalle-empresa.component.html
+++ b/src/app/empresas/detalle-empresa/detalle-empresa.component.html
@@ -9,7 +9,7 @@
       <div class="col-xl-10">
         <input
           type="text"
-          class="form-control form-control-sm is-valid"
+          class="form-control form-control-sm"
           id="validaNombre"
           placeholder="Nombre de la Organización"
           formControlName="nombre_Emp"
@@ -31,7 +31,7 @@
       <label for="validaCalle" class="col-form-label-sm">Calle</label>
         <input
           type="text"
-          class="form-control form-control-sm is-valid"
+          class="form-control form-control-sm"
           id="validaCalle"
           placeholder="Nombre de la Calle"
           formControlName="calle_Emp"
@@ -51,7 +51,7 @@
       <label for="validaColonia" class="col-form-label-sm">Colonia</label>
         <input
           type="text"
-          class="form-control form-control-sm is-valid"
+          class="form-control form-control-sm"
           id="validaColonia"
           placeholder="Nombre de la Colonia"
           formControlName="colonia_Emp"
@@ -73,7 +73,7 @@
       <label for="validaCiudad" class="col-form-label-sm">Ciudad</label>
       <input
         type="text"
-        class="form-control form-control-sm is-valid"
+        class="form-control form-control-sm"
         id="validaCiudad"
         placeholder="Ciudad"
         formControlName="ciudad_Emp"
@@ -92,7 +92,7 @@
       <label for="validaEstado" class="col-form-label-sm">Estado</label>
       <input
         type="text"
-        class="form-control form-control-sm is-valid"
+        class="form-control form-control-sm"
         id="validaEstado"
         placeholder="Estado"
         formControlName="estado_Emp"
@@ -111,7 +111,7 @@
       <label for="validaCp" class="col-form-label-sm">C.P.</label>
       <input
         type="text"
-        class="form-control form-control-sm is-valid"
+        class="form-control form-control-sm"
         id="validaCp"
         placeholder="Código Postal"
         formControlName="cp_Emp"
@@ -137,7 +137,7 @@
       <div class="col-xl-10">
         <input
           type="text"
-          class="form-control form-control-sm is-valid"
+          class="form-control form-control-sm"
           id="validaTelefono"
           placeholder="Número de teléfono"
           formControlName="telefono_Emp"
