--- a/src/app/core/admin/login/login.component.html
+++ b/src/app/core/admin/login/login.component.html
@@ -1,5 +1,9 @@
+<div class="spinner-border text-primary" style="position: absolute; left: 50%; top: 50%;" role="status">
+  <span class="sr-only">Loading...</span>
+</div>
+
 <!-- Modal -->
-<div class="modal fade" id="staticBackdrop" data-backdrop="static" data-keyboard="false" tabindex="-1" role="dialog" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+<div class="modal fade" id="Modal" data-backdrop="static" data-keyboard="false" tabindex="-1" role="dialog" aria-labelledby="staticBackdropLabel" aria-hidden="true">
   <div class="modal-dialog modal-dialog-centered">
     <div class="modal-content">
       <div class="modal-header text-center">
@@ -28,6 +32,9 @@
   </div>
 </div>
 
+<div class="spinner-border text-primary" style="position: absolute; left: 50%; top: 50%;" role="status">
+  <span class="sr-only">nada</span>
+</div>
       <!--
       <form class="col s12" style="margin-left: 1rem;" name="form" (ngSubmit)="f.form.valid && onLogin()" #f="ngForm" id="form_login">
 
