--- a/src/app/core/admin/login/login.component.html
+++ b/src/app/core/admin/login/login.component.html
@@ -16,7 +16,7 @@
 
         <div class="row">
           <div class="col-sm">
-            <img src="../../../../assets/error.gif" class="card-img" alt="Empresa" style="height: 6rem;">
+            <img src="../../../../assets/administrador.jpg" class="card-img" alt="Empresa" style="height: 6rem;">
           </div>
           <div class="col-sm">
             <p>Regitra a tu empresa o institución y PRUEBA la aplicación sin costo por 3 meses.</p>
