--- a/src/app/core/shell/header/header.component.html
+++ b/src/app/core/shell/header/header.component.html
@@ -4,7 +4,7 @@
 
     <ul class="navbar-nav">
       <li *ngIf="!isLogged" class="nav-item active">
-        <a routerLink="login" routerLinkActive="router-link-active" data-toggle="modal" data-target="#Modal">Login <span class="sr-only">(current)</span></a>
+        <a routerLink="empresas/empresa" routerLinkActive="router-link-active" data-toggle="modal" data-target="#Modal">Registrar Empresa <span class="sr-only">(current)</span></a>
       </li>
     </ul>
   </nav>
