--- a/src/app/core/shell/footer/footer.component.html
+++ b/src/app/core/shell/footer/footer.component.html
@@ -1,5 +1,5 @@
-<footer>
+<footer *ngIf = "datos[0]?.elegir">
   <nav class="navbar navbar-light bg-light">
-
+    <p>{{datos[0].calle_Emp}}</p>
   </nav>
 </footer>
