--- a/src/app/core/shell/footer/footer.component.html
+++ b/src/app/core/shell/footer/footer.component.html
@@ -1,5 +1,5 @@
-<footer *ngIf = "datos[0]?.elegir">
+<footer>
   <nav class="navbar navbar-light bg-light">
-    <p>{{datos[0].calle_Emp}}</p>
+    <p></p>
   </nav>
 </footer>
